<resources>
    <string name="app_name">homework_4</string>
    <string name="login_hint">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="login_username_text">用户账号:</string>
    <string name="login_password_text">登录密码:</string>
    <string name="button_login">Login</string>
    <string name="register_username">注册账号</string>
    <string name="password_confirm">确认密码</string>
    <string name="password_confirm_hint">请再次输入密码</string>
    <string name="register_age">年龄</string>
    <string name="register_sex">性别</string>
    <string name="hint_age">请输入年龄</string>
</resources>
