<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Register">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/register_username"
                android:textSize="20dp"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/register_username_text"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/register_username"
                android:layout_toRightOf="@+id/register_username_text"
                android:hint="@string/login_hint"
                android:gravity="left|center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
        />
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/register_age"
                android:textSize="20dp"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/register_age_text"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/register_age"
                android:layout_toRightOf="@+id/register_age_text"
                android:hint="@string/hint_age"
                android:gravity="left|center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
        />
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/register_sex"
                android:textSize="20dp"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/register_sex_text"
        />
            <RadioGroup
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_toRightOf="@+id/register_sex_text"

                    android:layout_height="wrap_content">
                <RadioButton
                        android:id="@+id/man"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="50dp"
                        android:textSize="20dp"
                        android:text="男"/>
                <RadioButton
                        android:id="@+id/woman"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="50dp"
                        android:textSize="20dp"
                        android:text="女"/>
            </RadioGroup>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/login_password_text"
                android:textSize="20dp"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/register_password_text"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/register_password"
                android:layout_toRightOf="@+id/register_password_text"
                android:hint="@string/hint_password"
                android:gravity="left|center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
        />
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/password_confirm"
                android:textSize="20dp"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:id="@+id/register_password2_text"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/register_password2"
                android:layout_toRightOf="@+id/register_password2_text"
                android:hint="@string/password_confirm_hint"
                android:gravity="left|center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:textSize="20dp"
        />
    </RelativeLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register"
                android:layout_gravity="center"
                android:onClick="toRegister"
        />
    </LinearLayout>
</LinearLayout>
