<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="200dp"
    >
        <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/login_username_text"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/login_hint"
                android:id="@+id/login_username"
                android:background="@drawable/editext_selector"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/tv_username"
                android:gravity="left|center"
                android:layout_marginLeft="0dp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">
        <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/login_password_text"
                android:textColor="@color/black"
                android:textSize="17sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:id="@+id/login_password"
                android:background="@drawable/editext_selector"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/tv_password"
                android:gravity="left|center"
        />
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="@string/button_login"
                android:id="@+id/button_login"
                android:layout_marginLeft="80dp"
                android:onClick="toLogin"
        />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:text="Register"
                android:layout_toRightOf="@+id/button_login"
                android:layout_marginLeft="80dp"
                android:onClick="toRegister"
                android:id="@+id/button_register"
        />
    </RelativeLayout>

</LinearLayout>
